--- a/index.html
+++ b/index.html
@@ -31,12 +31,28 @@
              </div>
          </div>
          <div class="black_Div">
-              <h3 class="trusted"> trusted over <span class="num"> 30k</span>world class companies of all sizes </h3>
+              <h3 class="trusted"> Trusted over <span class="num"> 30k</span> world class companies of all sizes </h3>
               <img src="./Assets/Shell.png" alt="" class="black_div_Img">
               <img src="./Assets/Oando.png" alt="" class="black_div_Img">
               <img src="./Assets/Chevron.png" alt="" class="black_div_Img">
               <img src="./Assets/Mtn.png" alt="" class="black_div_Img">
          </div>
-     </div>
+          <div class="about_US">
+             <div class="about_Text_Box">
+                <p class="who">who we are </p>
+                <h3 class="about_us">about us</h3>
+                 <p class="about_paragraph">
+                    Lorem ipsum dolor sit amet consectetur. Amet orci elit sed pellentesque nisi est sem dolor nunc. Quis non velit nulla libero sapien aliquam vitae. Lacinia id pellentesque lobortis et porttitor. Duis dolor dictumst justo habitant pretium praesent at ornare. Commodo facilisi quis sed posuere mus diam id nulla. Quam tristique morbi interdum euismod et eget aliquam est. Vitae pellentesque eget.
+                 </p>
+                 <div class="about_Inner_Div">
+                    <div class="innerDiv_1">
+                        <img src="./Assets//Tag.png" alt="" class="innerDiv_img">
+                        <p class="inner_div_P">We are No 1 oil <br>
+                            and gas company</p>
+                    </div>
+                    <div class="innerDiv_1"></div>
+                 </div>
+             </div>
+          </div>
 </body>
 </html>
