working in the about section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,20 @@
                         <p class="inner_div_P">We are No 1 oil <br>
                             and gas company</p>
                     </div>
-                    <div class="innerDiv_1"></div>
+                    <div class="innerDiv_1">
+                        <div class="svg_Div">
+                            <img src="./Assets//Vector.svg" alt="" class="svg">
+                            <p class="svg_P">lorem ipsum </p>
+                         </div>
+                        <div class="svg_Div">
+                            <img src="./Assets//Vector.svg" alt="" class="svg">
+                            <p class="svg_P">lorem ipsum </p>
+                         </div>
+                        <div class="svg_Div">
+                            <img src="./Assets//Vector.svg" alt="" class="svg">
+                            <p class="svg_P">lorem ipsum </p>
+                         </div>
+                    </div>
                  </div>
              </div>
           </div>
