done with the about us section

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                     Lorem ipsum dolor sit amet consectetur. Amet orci elit sed pellentesque nisi est sem dolor nunc. Quis non velit nulla libero sapien aliquam vitae. Lacinia id pellentesque lobortis et porttitor. Duis dolor dictumst justo habitant pretium praesent at ornare. Commodo facilisi quis sed posuere mus diam id nulla. Quam tristique morbi interdum euismod et eget aliquam est. Vitae pellentesque eget.
                  </p>
                  <div class="about_Inner_Div">
-                    <div class="innerDiv_1">
+                    <div class="innerDiv_Box">
                         <img src="./Assets//Tag.png" alt="" class="innerDiv_img">
                         <p class="inner_div_P">We are No 1 oil <br>
                             and gas company</p>
                     </div>
-                    <div class="innerDiv_1">
+                    <div class="innerDiv_Box">
                         <div class="svg_Div">
                             <img src="./Assets//Vector.svg" alt="" class="svg">
                             <p class="svg_P">lorem ipsum </p>
@@ -63,9 +63,11 @@
                             <img src="./Assets//Vector.svg" alt="" class="svg">
                             <p class="svg_P">lorem ipsum </p>
                          </div>
+                         <button class="inner_div_btn">read more</button>
                     </div>
                  </div>
              </div>
+             <img src="./Assets/Factory.png" alt="" class="factory">
           </div>
 </body>
 </html>
