--- a/index.html
+++ b/index.html
@@ -113,5 +113,36 @@
              Nobis, animi rerum nesciunt minima veniam consequatur nulla nemo officiis et blanditiis aut dolore eaque minus fugit dolores molestiae! Velit, fugiat molestias aperiam delectus sit libero odit molestiae officia itaque.
              Doloribus provident iure dignissimos quam ad cumque, ipsam odio maxime animi autem sunt dolor veniam labore reiciendis repudiandae fugiat aspernatur quibusdam earum consequuntur, consectetur nobis voluptatem hic ullam? Quos, nobis.</p>
           </div>
+          <section class="service_section">
+            <p class="our">our services</p>
+            <h3 class="services_title">outline of our services</h3>
+            <div class="three_divs">
+                 <div class="div_card">
+                    <img src="./Assets/Jerrycan.png" alt="" class="three_divs_img">
+                    <div class="bottom_div">
+                         <img src="./Assets/Filter.png" alt="" class="small_img">
+                         <h3 class="title">general oil servicing</h3>
+                         <p class="div_card_P">lore ipsum dolor si amet dolor</p>
+                    </div>
+                 </div>
+                 <div class="div_card">
+                    <img src="./Assets/Refinery.png" alt="" class="three_divs_img">
+                    <div class="bottom_div">
+                         <img src="./Assets/Droplet.png" alt="" class="small_img">
+                         <h3 class="title">general oil servicing</h3>
+                         <p class="div_card_P">lore ipsum dolor si amet dolor</p>
+                    </div>
+                 </div>
+                 <div class="div_card">
+                    <img src="./Assets/Rig.png" alt="" class="three_divs_img">
+                    <div class="bottom_div">
+                         <img src="./Assets/Can.png" alt="" class="small_img">
+                         <h3 class="title">general oil servicing</h3>
+                         <p class="div_card_P">lore ipsum dolor si amet dolor</p>
+                    </div>
+                 </div>
+            </div>
+          </section>
+
 </body>
 </html>
