added a new css file for the media query

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     , initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -178,6 +179,7 @@
                  <button class="goal_Btn">learn more</button>
                 </div>
             </div>
+            
             <div class="goal_Boxes">
                 <p class="goal_Number">5</p>
                 <div class="inner_goal_boxes">
@@ -192,6 +194,12 @@
                  <button class="goal_Btn">learn more</button>
                 </div>
             </div>
+          </div>
+         
+          <div class="Oil_rig">
+            <h3 class="Oil_Title">lore ispsum dolor sit amet</h3>
+            <p class="oil_title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim, laboriosam. Iure, dolores. Obcaecati sint expedita eius voluptates quas dolorem reprehenderit aliquid nostrum numquam inventore? Sunt nulla laboriosam et iste totam?</p>
+            <button class="Oil_Btn">book an appointment</button>
           </div>
 </body> 
 </html>
