done with media query

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Document</title>
+    <title>Mayport Oil and Gas </title>
+    <link rel="shortcut icon" href="./Assets//OIL_Rig.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -201,5 +202,53 @@
             <p class="oil_title">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim, laboriosam. Iure, dolores. Obcaecati sint expedita eius voluptates quas dolorem reprehenderit aliquid nostrum numquam inventore? Sunt nulla laboriosam et iste totam?</p>
             <button class="Oil_Btn">book an appointment</button>
           </div>
+
+           <footer>
+             <div class="footer_first_div">
+                 <div class="div_1">
+                    <h3 class="Footer_Logo">comoLogo</h3> 
+                    <p class="footerP">Lorem ipsum dolor sit amet .</p>
+                 </div>
+                 <div class="second_Div">
+                     <p class="signUp"> Sign up for our  newsletter to grt update informations , news  <br> insight or promotion</p>
+                     <form action="">
+                         <p class="form_p">Email</p>
+                        <input type="text" placeholder="Type Email Address"><br>
+                        <button class="footer_BTn">sign up</button>
+                     </form>
+                 </div>
+             </div>
+             <div class="footer_down_div">
+                <div class="footer_down_card">
+                    <h3 class="footer_down_div_title">lore ipsum</h3>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                </div>
+                <div class="footer_down_card">
+                    <h3 class="footer_down_div_title">lore ipsum</h3>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                </div>
+                <div class="footer_down_card">
+                    <h3 class="footer_down_div_title">lore ipsum</h3>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                </div>
+                <div class="footer_down_card">
+                    <h3 class="footer_down_div_title">lore ipsum</h3>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                    <p class="footer_down_div_paragraph">lorem</p>
+                </div>
+             </div>
+             <p class="lastwords"> all right resrved &copy;2024 comName</p>
+           </footer>
 </body> 
 </html>
