fixed some inadequates styling in the media query

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
              <div class="footer_first_div">
                  <div class="div_1">
                     <h3 class="Footer_Logo">comoLogo</h3> 
-                    <p class="footerP">Lorem ipsum dolor sit amet .</p>
+                    <p class="footerP">  POWERING PROGRESS. ENERGIZING YOUR WORLD. .</p>
                  </div>
                  <div class="second_Div">
                      <p class="signUp"> Sign up for our  newsletter to grt update informations , news  <br> insight or promotion</p>
