fixed some inadequates styling in the media query

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                     </div>
                  </div>
              </div>
-             <img src="./Assets/Factory.png" alt="" class="factory">
+             <div class="factory_Div">
+                <img src="./Assets/Factory.png" alt="" class="factory">
+             </div>
           </div>
           <section class="grid_Container">
               
